remove root installation id
